# SlideX

backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/prompts/: ppt_system_prompt.py
backend/app/services/: llm.py  ppt_generator_agent.py
backend/static/ppt_files/: elon_musk:_visionary_entrepreneur_and_innovator20260626_163619.pptx  elon_musk:_visionary_leadership_and_innovation20260626_163758.pptx  my_ppt.pptx
backend/tests/: demo.py
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
