[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
]
